--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -8,19 +9,16 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
     --radius-lg: 0.5rem;
-    --radius-2xl: 1rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --font-play: "Playfair Display", serif;
   }
 }
 @layer base {
@@ -190,11 +188,14 @@
       max-width: 95rem;
     }
   }
+  .my-\[52px\] {
+    margin-block: 52px;
+  }
   .mr-9 {
     margin-right: calc(var(--spacing) * 9);
   }
-  .mr-\[36px\] {
-    margin-right: 36px;
+  .mb-\[21px\] {
+    margin-bottom: 21px;
   }
   .ml-\[830px\] {
     margin-left: 830px;
@@ -208,26 +209,29 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-\[40px\] {
-    height: 40px;
-  }
   .h-\[50px\] {
     height: 50px;
-  }
-  .h-\[52\] {
-    height: 52;
   }
   .h-\[52px\] {
     height: 52px;
   }
+  .h-\[63px\] {
+    height: 63px;
+  }
+  .h-\[75px\] {
+    height: 75px;
+  }
   .h-\[100px\] {
     height: 100px;
   }
-  .w-\[77\] {
-    width: 77;
+  .h-\[560px\] {
+    height: 560px;
   }
   .w-\[77px\] {
     width: 77px;
+  }
+  .w-\[90px\] {
+    width: 90px;
   }
   .w-\[91px\] {
     width: 91px;
@@ -235,20 +239,20 @@
   .w-\[211px\] {
     width: 211px;
   }
-  .w-\[1680\] {
-    width: 1680;
+  .w-\[234px\] {
+    width: 234px;
   }
-  .w-\[1680px\] {
-    width: 1680px;
+  .w-\[272px\] {
+    width: 272px;
   }
-  .w-\[1920px\] {
-    width: 1920px;
+  .w-\[324\] {
+    width: 324;
+  }
+  .w-\[324px\] {
+    width: 324px;
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-\[1680px\] {
-    max-width: 1680px;
   }
   .max-w-\[1920px\] {
     max-width: 1920px;
@@ -265,29 +269,26 @@
   .items-center {
     align-items: center;
   }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-2\.5 {
+    gap: calc(var(--spacing) * 2.5);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
   .gap-\[46px\] {
     gap: 46px;
   }
-  .rounded {
-    border-radius: 0.25rem;
+  .gap-\[129px\] {
+    gap: 129px;
   }
-  .rounded-2xl {
-    border-radius: var(--radius-2xl);
-  }
-  .rounded-\[5\] {
-    border-radius: 5;
+  .gap-\[651px\] {
+    gap: 651px;
   }
   .rounded-\[5px\] {
     border-radius: 5px;
-  }
-  .rounded-\[8\] {
-    border-radius: 8;
-  }
-  .rounded-\[8px\] {
-    border-radius: 8px;
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
@@ -296,11 +297,14 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-amber-300 {
-    border-color: var(--color-amber-300);
-  }
   .border-black {
     border-color: var(--color-black);
+  }
+  .bg-\[\#160813\] {
+    background-color: #160813;
+  }
+  .bg-\[\#241520\] {
+    background-color: #241520;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -314,8 +318,8 @@
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
+  .px-\[360px\] {
+    padding-inline: 360px;
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -323,11 +327,11 @@
   .py-3\.5 {
     padding-block: calc(var(--spacing) * 3.5);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
-  .pt-\[25\] {
-    padding-top: 25;
+  .py-\[66px\] {
+    padding-block: 66px;
   }
   .pt-\[25px\] {
     padding-top: 25px;
@@ -335,13 +339,33 @@
   .pb-\[22px\] {
     padding-bottom: 22px;
   }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  .text-center {
+    text-align: center;
+  }
+  .font-play {
+    font-family: var(--font-play);
+  }
+  .text-\[17px\] {
+    font-size: 17px;
+  }
+  .text-\[22px\] {
+    font-size: 22px;
+  }
+  .leading-5 {
+    --tw-leading: calc(var(--spacing) * 5);
+    line-height: calc(var(--spacing) * 5);
   }
   .leading-6 {
     --tw-leading: calc(var(--spacing) * 6);
     line-height: calc(var(--spacing) * 6);
+  }
+  .leading-8 {
+    --tw-leading: calc(var(--spacing) * 8);
+    line-height: calc(var(--spacing) * 8);
+  }
+  .leading-9 {
+    --tw-leading: calc(var(--spacing) * 9);
+    line-height: calc(var(--spacing) * 9);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
