--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 @import "tailwindcss";
 
@@ -13,6 +14,7 @@
 
     /* Font-Family */
     --font-manrope: "Manrope", sans-serif;
+    --font-play:  "Playfair Display", serif;
 
     /* break Point */
   --breakpoint-*: initial;
