--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,23 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-3xl: 48rem;
+    --container-7xl: 80rem;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --tracking-wide: 0.025em;
     --radius-lg: 0.5rem;
+    --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --font-manrope: "Manrope", sans-serif;
     --font-play: "Playfair Display", serif;
   }
 }
@@ -172,6 +178,9 @@
   }
 }
 @layer utilities {
+  .relative {
+    position: relative;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -190,20 +199,125 @@
       max-width: 95rem;
     }
   }
+  .m-6 {
+    margin: calc(var(--spacing) * 6);
+  }
+  .mx-6 {
+    margin-inline: calc(var(--spacing) * 6);
+  }
+  .mx-\[32px\] {
+    margin-inline: 32px;
+  }
+  .mx-\[236px\] {
+    margin-inline: 236px;
+  }
+  .my-6 {
+    margin-block: calc(var(--spacing) * 6);
+  }
+  .my-\[32px\] {
+    margin-block: 32px;
+  }
   .my-\[52px\] {
     margin-block: 52px;
+  }
+  .my-\[236\] {
+    margin-block: 236;
+  }
+  .my-\[236px\] {
+    margin-block: 236px;
+  }
+  .my-\[300px\] {
+    margin-block: 300px;
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
   }
   .mr-9 {
     margin-right: calc(var(--spacing) * 9);
   }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-2\.5 {
+    margin-bottom: calc(var(--spacing) * 2.5);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
+  }
+  .mb-\[1\] {
+    margin-bottom: 1;
+  }
+  .mb-\[2px\] {
+    margin-bottom: 2px;
+  }
+  .mb-\[5\] {
+    margin-bottom: 5;
   }
   .mb-\[7px\] {
     margin-bottom: 7px;
   }
+  .mb-\[10px\] {
+    margin-bottom: 10px;
+  }
+  .mb-\[11\] {
+    margin-bottom: 11;
+  }
   .mb-\[21px\] {
     margin-bottom: 21px;
+  }
+  .mb-\[23\] {
+    margin-bottom: 23;
+  }
+  .mb-\[23px\] {
+    margin-bottom: 23px;
+  }
+  .mb-\[29px\] {
+    margin-bottom: 29px;
+  }
+  .mb-\[30px\] {
+    margin-bottom: 30px;
+  }
+  .mb-\[39px\] {
+    margin-bottom: 39px;
+  }
+  .mb-\[69\] {
+    margin-bottom: 69;
+  }
+  .mb-\[69px\] {
+    margin-bottom: 69px;
+  }
+  .mb-\[100px\] {
+    margin-bottom: 100px;
+  }
+  .mb-\[200\] {
+    margin-bottom: 200;
+  }
+  .mb-\[200px\] {
+    margin-bottom: 200px;
+  }
+  .ml-10 {
+    margin-left: calc(var(--spacing) * 10);
+  }
+  .ml-\[120px\] {
+    margin-left: 120px;
+  }
+  .ml-\[130px\] {
+    margin-left: 130px;
+  }
+  .ml-\[200px\] {
+    margin-left: 200px;
   }
   .ml-\[830px\] {
     margin-left: 830px;
@@ -211,20 +325,59 @@
   .flex {
     display: flex;
   }
+  .hidden {
+    display: none;
+  }
   .table {
     display: table;
+  }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-40 {
     height: calc(var(--spacing) * 40);
+  }
+  .h-\[5\] {
+    height: 5;
+  }
+  .h-\[6\] {
+    height: 6;
+  }
+  .h-\[9\] {
+    height: 9;
+  }
+  .h-\[24px\] {
+    height: 24px;
+  }
+  .h-\[32px\] {
+    height: 32px;
+  }
+  .h-\[38\] {
+    height: 38;
+  }
+  .h-\[38px\] {
+    height: 38px;
   }
   .h-\[50px\] {
     height: 50px;
   }
   .h-\[52px\] {
     height: 52px;
+  }
+  .h-\[53\] {
+    height: 53;
+  }
+  .h-\[53px\] {
+    height: 53px;
   }
   .h-\[62px\] {
     height: 62px;
@@ -235,41 +388,80 @@
   .h-\[75px\] {
     height: 75px;
   }
+  .h-\[80\] {
+    height: 80;
+  }
+  .h-\[80px\] {
+    height: 80px;
+  }
   .h-\[100px\] {
     height: 100px;
   }
-  .h-\[160\] {
-    height: 160;
+  .h-\[116px\] {
+    height: 116px;
   }
-  .h-\[160px\] {
-    height: 160px;
+  .h-\[117px\] {
+    height: 117px;
+  }
+  .h-\[154\] {
+    height: 154;
+  }
+  .h-\[154p\] {
+    height: 154p;
+  }
+  .h-\[154px\] {
+    height: 154px;
   }
   .h-\[278\.58px\] {
     height: 278.58px;
   }
-  .h-\[278\.\] {
-    height: 278.;
-  }
-  .h-\[278\] {
-    height: 278;
-  }
-  .h-\[418\] {
-    height: 418;
-  }
   .h-\[418px\] {
     height: 418px;
+  }
+  .h-\[536\] {
+    height: 536;
+  }
+  .h-\[536px\] {
+    height: 536px;
   }
   .h-\[560px\] {
     height: 560px;
   }
-  .h-\[833\] {
-    height: 833;
+  .h-\[611\] {
+    height: 611;
+  }
+  .h-\[611px\] {
+    height: 611px;
+  }
+  .h-\[643px\] {
+    height: 643px;
   }
   .h-\[833px\] {
     height: 833px;
   }
-  .w-949 {
-    width: calc(var(--spacing) * 949);
+  .h-\[944px\] {
+    height: 944px;
+  }
+  .h-\[948\] {
+    height: 948;
+  }
+  .h-\[948px\] {
+    height: 948px;
+  }
+  .w-7xl {
+    width: var(--container-7xl);
+  }
+  .w-\[29\] {
+    width: 29;
+  }
+  .w-\[38\] {
+    width: 38;
+  }
+  .w-\[55\] {
+    width: 55;
+  }
+  .w-\[55px\] {
+    width: 55px;
   }
   .w-\[77px\] {
     width: 77px;
@@ -295,23 +487,59 @@
   .w-\[324px\] {
     width: 324px;
   }
+  .w-\[336\] {
+    width: 336;
+  }
+  .w-\[336px\] {
+    width: 336px;
+  }
+  .w-\[384\] {
+    width: 384;
+  }
+  .w-\[384px\] {
+    width: 384px;
+  }
   .w-\[508px\] {
     width: 508px;
-  }
-  .w-\[510\] {
-    width: 510;
   }
   .w-\[510px\] {
     width: 510px;
   }
-  .w-\[949\] {
-    width: 949;
+  .w-\[768px\] {
+    width: 768px;
   }
   .w-\[949px\] {
     width: 949px;
   }
+  .w-\[1280\] {
+    width: 1280;
+  }
+  .w-\[1280p\] {
+    width: 1280p;
+  }
+  .w-\[1280px\] {
+    width: 1280px;
+  }
+  .w-\[1680\] {
+    width: 1680;
+  }
+  .w-\[1680px\] {
+    width: 1680px;
+  }
+  .w-\[1920\] {
+    width: 1920;
+  }
+  .w-\[1920px\] {
+    width: 1920px;
+  }
   .w-full {
     width: 100%;
+  }
+  .max-w-3xl {
+    max-width: var(--container-3xl);
+  }
+  .max-w-\[55px\] {
+    max-width: 55px;
   }
   .max-w-\[1920px\] {
     max-width: 1920px;
@@ -328,8 +556,8 @@
   .items-center {
     align-items: center;
   }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
+  .justify-between {
+    justify-content: space-between;
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -343,11 +571,17 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-\[9\] {
-    gap: 9;
+  .gap-\[4\] {
+    gap: 4;
   }
   .gap-\[9px\] {
     gap: 9px;
+  }
+  .gap-\[10\] {
+    gap: 10;
+  }
+  .gap-\[10px\] {
+    gap: 10px;
   }
   .gap-\[46px\] {
     gap: 46px;
@@ -358,8 +592,26 @@
   .gap-\[651px\] {
     gap: 651px;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
+  }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-\[8px\] {
+    border-radius: 8px;
+  }
+  .rounded-\[24px\] {
+    border-radius: 24px;
+  }
+  .rounded-\[40\] {
+    border-radius: 40;
+  }
+  .rounded-\[40px\] {
+    border-radius: 40px;
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
@@ -367,6 +619,12 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-\[\#bc7b97\] {
+    border-color: #bc7b97;
+  }
+  .border-amber-400 {
+    border-color: var(--color-amber-400);
   }
   .border-amber-600 {
     border-color: var(--color-amber-600);
@@ -380,35 +638,23 @@
   .bg-\[\#241520\] {
     background-color: #241520;
   }
-  .bg-\[ur\] {
-    background-color: ur;
-  }
-  .bg-\[urr\] {
-    background-color: urr;
+  .bg-\[\#EBF3F5\] {
+    background-color: #EBF3F5;
   }
   .bg-black {
     background-color: var(--color-black);
   }
-  .bg-\[url\(\.\/ima\.png\)\] {
-    background-image: url(./ima.png);
-  }
-  .bg-\[url\(\.\/images\.png\)\] {
-    background-image: url(./images.png);
-  }
-  .bg-\[url\(\.\/images\/banner\.png\)\] {
-    background-image: url(./images/banner.png);
-  }
-  .bg-\[url\(\/\.\/images\/banner\.png\)\] {
-    background-image: url(/./images/banner.png);
-  }
   .bg-\[url\(\/images\/banner\.png\)\] {
     background-image: url(/images/banner.png);
   }
-  .bg-\[url\(\/img\/mountains\.jpg\)\] {
-    background-image: url(/img/mountains.jpg);
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
   }
-  .bg-\[url\(images\/banner\.png\)\] {
-    background-image: url(images/banner.png);
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
+  .p-\[256px\] {
+    padding: 256px;
   }
   .container {
     padding-inline: 120px;
@@ -416,8 +662,47 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-8 {
+    padding-inline: calc(var(--spacing) * 8);
+  }
+  .px-16 {
+    padding-inline: calc(var(--spacing) * 16);
+  }
+  .px-64 {
+    padding-inline: calc(var(--spacing) * 64);
+  }
+  .px-\[11\] {
+    padding-inline: 11;
+  }
+  .px-\[16\] {
+    padding-inline: 16;
+  }
+  .px-\[16px\] {
+    padding-inline: 16px;
+  }
+  .px-\[64px\] {
+    padding-inline: 64px;
+  }
+  .px-\[84px\] {
+    padding-inline: 84px;
+  }
+  .px-\[111px\] {
+    padding-inline: 111px;
+  }
+  .px-\[120px\] {
+    padding-inline: 120px;
+  }
+  .px-\[175px\] {
+    padding-inline: 175px;
+  }
+  .px-\[256px\] {
+    padding-inline: 256px;
   }
   .px-\[360px\] {
     padding-inline: 360px;
@@ -428,17 +713,56 @@
   .py-3\.5 {
     padding-block: calc(var(--spacing) * 3.5);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
+  }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
+  }
+  .py-16 {
+    padding-block: calc(var(--spacing) * 16);
+  }
+  .py-\[32\] {
+    padding-block: 32;
+  }
+  .py-\[32px\] {
+    padding-block: 32px;
+  }
+  .py-\[64px\] {
+    padding-block: 64px;
   }
   .py-\[66px\] {
     padding-block: 66px;
   }
-  .py-\[207\] {
-    padding-block: 207;
+  .py-\[84\] {
+    padding-block: 84;
+  }
+  .py-\[84px\] {
+    padding-block: 84px;
+  }
+  .py-\[111px\] {
+    padding-block: 111px;
+  }
+  .py-\[115px\] {
+    padding-block: 115px;
+  }
+  .py-\[120\] {
+    padding-block: 120;
+  }
+  .py-\[120px\] {
+    padding-block: 120px;
+  }
+  .py-\[175px\] {
+    padding-block: 175px;
   }
   .py-\[207px\] {
     padding-block: 207px;
+  }
+  .py-\[256px\] {
+    padding-block: 256px;
   }
   .pt-\[25px\] {
     padding-top: 25px;
@@ -446,14 +770,14 @@
   .pb-\[22px\] {
     padding-bottom: 22px;
   }
-  .pl-\[218\] {
-    padding-left: 218;
-  }
   .pl-\[218px\] {
     padding-left: 218px;
   }
   .text-center {
     text-align: center;
+  }
+  .font-manrope {
+    font-family: var(--font-manrope);
   }
   .font-play {
     font-family: var(--font-play);
@@ -467,15 +791,24 @@
   .text-\[18px\] {
     font-size: 18px;
   }
+  .text-\[20px\] {
+    font-size: 20px;
+  }
   .text-\[22px\] {
     font-size: 22px;
+  }
+  .text-\[24px\] {
+    font-size: 24px;
+  }
+  .text-\[45px\] {
+    font-size: 45px;
   }
   .text-\[70px\] {
     font-size: 70px;
   }
-  .leading-4 {
-    --tw-leading: calc(var(--spacing) * 4);
-    line-height: calc(var(--spacing) * 4);
+  .leading-3 {
+    --tw-leading: calc(var(--spacing) * 3);
+    line-height: calc(var(--spacing) * 3);
   }
   .leading-5 {
     --tw-leading: calc(var(--spacing) * 5);
@@ -497,13 +830,37 @@
     --tw-leading: calc(var(--spacing) * 9);
     line-height: calc(var(--spacing) * 9);
   }
-  .leading-10 {
-    --tw-leading: calc(var(--spacing) * 10);
-    line-height: calc(var(--spacing) * 10);
+  .leading-11 {
+    --tw-leading: calc(var(--spacing) * 11);
+    line-height: calc(var(--spacing) * 11);
   }
   .leading-20 {
     --tw-leading: calc(var(--spacing) * 20);
     line-height: calc(var(--spacing) * 20);
+  }
+  .leading-\[11\] {
+    --tw-leading: 11;
+    line-height: 11;
+  }
+  .leading-\[30\] {
+    --tw-leading: 30;
+    line-height: 30;
+  }
+  .leading-\[30px\] {
+    --tw-leading: 30px;
+    line-height: 30px;
+  }
+  .leading-\[32\] {
+    --tw-leading: 32;
+    line-height: 32;
+  }
+  .leading-\[32px\] {
+    --tw-leading: 32px;
+    line-height: 32px;
+  }
+  .leading-\[60px\] {
+    --tw-leading: 60px;
+    line-height: 60px;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -521,11 +878,77 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .tracking-\[3px\] {
+    --tw-tracking: 3px;
+    letter-spacing: 3px;
+  }
+  .tracking-\[5px\] {
+    --tw-tracking: 5px;
+    letter-spacing: 5px;
+  }
+  .tracking-\[8px\] {
+    --tw-tracking: 8px;
+    letter-spacing: 8px;
+  }
+  .tracking-\[10px\] {
+    --tw-tracking: 10px;
+    letter-spacing: 10px;
+  }
+  .tracking-\[20px\] {
+    --tw-tracking: 20px;
+    letter-spacing: 20px;
+  }
+  .tracking-\[50px\] {
+    --tw-tracking: 50px;
+    letter-spacing: 50px;
+  }
+  .tracking-\[80px\] {
+    --tw-tracking: 80px;
+    letter-spacing: 80px;
+  }
+  .tracking-\[100px\] {
+    --tw-tracking: 100px;
+    letter-spacing: 100px;
+  }
+  .tracking-wide {
+    --tw-tracking: var(--tracking-wide);
+    letter-spacing: var(--tracking-wide);
+  }
+  .text-\[\#\#422a3c\] {
+    color: ##422a3c;
+  }
+  .text-\[\#\#bc7b97\] {
+    color: ##bc7b97;
+  }
+  .text-\[\#422a3c\] {
+    color: #422a3c;
+  }
+  .text-\[\#2596be\] {
+    color: #2596be;
+  }
+  .text-\[\#808080\] {
+    color: #808080;
+  }
+  .text-\[\#bc7b97\] {
+    color: #bc7b97;
+  }
+  .text-\[\#e88aa0\] {
+    color: #e88aa0;
+  }
+  .text-\[15\] {
+    color: 15;
+  }
   .text-\[18\] {
     color: 18;
   }
-  .text-\[70\] {
-    color: 70;
+  .text-\[20\] {
+    color: 20;
+  }
+  .text-\[45\] {
+    color: 45;
+  }
+  .text-\[text-\[\#422a3c\]\] {
+    color: text-[#422a3c];
   }
   .text-\[wheat\] {
     color: wheat;
@@ -540,6 +963,18 @@
     text-decoration-line: underline;
   }
   .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
@@ -578,6 +1013,10 @@
   inherits: false;
 }
 @property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
   syntax: "*";
   inherits: false;
 }
@@ -662,6 +1101,7 @@
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
