--- a/css/style.css
+++ b/css/style.css
@@ -9,38 +9,41 @@
   :root, :host {
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-pink-200: oklch(89.9% 0.061 343.231);
     --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-gray-900: oklch(21% 0.034 264.665);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
+    --container-lg: 32rem;
     --container-xl: 36rem;
     --container-3xl: 48rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
-    --text-xs: 0.75rem;
-    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --tracking-wide: 0.025em;
     --tracking-widest: 0.1em;
+    --leading-tight: 1.25;
     --leading-relaxed: 1.625;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -211,6 +214,9 @@
   .relative {
     position: relative;
   }
+  .-top-8 {
+    top: calc(var(--spacing) * -8);
+  }
   .top-1 {
     top: calc(var(--spacing) * 1);
   }
@@ -220,8 +226,14 @@
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
+  .-right-8 {
+    right: calc(var(--spacing) * -8);
+  }
   .left-3 {
     left: calc(var(--spacing) * 3);
+  }
+  .-z-10 {
+    z-index: calc(10 * -1);
   }
   .container {
     width: 100%;
@@ -241,17 +253,11 @@
       max-width: 95rem;
     }
   }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
   .m-auto {
     margin: auto;
-  }
-  .mx-\[9\] {
-    margin-inline: 9;
-  }
-  .mx-\[96\] {
-    margin-inline: 96;
-  }
-  .mx-\[96px\] {
-    margin-inline: 96px;
   }
   .mx-\[236px\] {
     margin-inline: 236px;
@@ -301,20 +307,23 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
+  .mb-11 {
+    margin-bottom: calc(var(--spacing) * 11);
+  }
   .mb-\[7px\] {
     margin-bottom: 7px;
-  }
-  .mb-\[15\[z\]\] {
-    margin-bottom: 15[z];
-  }
-  .mb-\[15\] {
-    margin-bottom: 15;
   }
   .mb-\[15px\] {
     margin-bottom: 15px;
   }
   .mb-\[21px\] {
     margin-bottom: 21px;
+  }
+  .mb-\[23px\] {
+    margin-bottom: 23px;
   }
   .mb-\[39px\] {
     margin-bottom: 39px;
@@ -333,6 +342,9 @@
   }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .table {
     display: table;
@@ -361,9 +373,6 @@
   .h-40 {
     height: calc(var(--spacing) * 40);
   }
-  .h-\[00px\] {
-    height: 00px;
-  }
   .h-\[33px\] {
     height: 33px;
   }
@@ -384,6 +393,9 @@
   }
   .h-\[63px\] {
     height: 63px;
+  }
+  .h-\[65px\] {
+    height: 65px;
   }
   .h-\[66px\] {
     height: 66px;
@@ -415,9 +427,6 @@
   .h-\[278\.58px\] {
     height: 278.58px;
   }
-  .h-\[353\] {
-    height: 353;
-  }
   .h-\[353px\] {
     height: 353px;
   }
@@ -439,20 +448,8 @@
   .h-\[560px\] {
     height: 560px;
   }
-  .h-\[586\] {
-    height: 586;
-  }
-  .h-\[586px\] {
-    height: 586px;
-  }
-  .h-\[600\[x\]\] {
-    height: 600[x];
-  }
-  .h-\[600\] {
-    height: 600;
-  }
-  .h-\[600px\] {
-    height: 600px;
+  .h-\[611\] {
+    height: 611;
   }
   .h-\[611px\] {
     height: 611px;
@@ -466,23 +463,20 @@
   .h-\[700px\] {
     height: 700px;
   }
-  .h-\[719\] {
-    height: 719;
-  }
-  .h-\[719px\] {
-    height: 719px;
-  }
   .h-\[833px\] {
     height: 833px;
+  }
+  .h-\[898\] {
+    height: 898;
+  }
+  .h-\[898px\] {
+    height: 898px;
   }
   .h-\[944px\] {
     height: 944px;
   }
   .h-\[948px\] {
     height: 948px;
-  }
-  .h-\[1000px\] {
-    height: 1000px;
   }
   .h-\[1085px\] {
     height: 1085px;
@@ -499,6 +493,15 @@
   .w-7xl {
     width: var(--container-7xl);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-\[65\] {
+    width: 65;
+  }
+  .w-\[65px\] {
+    width: 65px;
+  }
   .w-\[77px\] {
     width: 77px;
   }
@@ -510,9 +513,6 @@
   }
   .w-\[130px\] {
     width: 130px;
-  }
-  .w-\[132\] {
-    width: 132;
   }
   .w-\[211px\] {
     width: 211px;
@@ -544,6 +544,9 @@
   .w-\[510px\] {
     width: 510px;
   }
+  .w-\[545px\] {
+    width: 545px;
+  }
   .w-\[594px\] {
     width: 594px;
   }
@@ -553,20 +556,17 @@
   .w-\[949px\] {
     width: 949px;
   }
-  .w-\[1010\] {
-    width: 1010;
-  }
-  .w-\[1010p\] {
-    width: 1010p;
-  }
   .w-\[1010px\] {
     width: 1010px;
   }
+  .w-\[1200\] {
+    width: 1200;
+  }
+  .w-\[1200px\] {
+    width: 1200px;
+  }
   .w-\[1328px\] {
     width: 1328px;
-  }
-  .w-\[1448\] {
-    width: 1448;
   }
   .w-\[1448px\] {
     width: 1448px;
@@ -589,14 +589,17 @@
   .max-w-3xl {
     max-width: var(--container-3xl);
   }
-  .max-w-6xl {
-    max-width: var(--container-6xl);
+  .max-w-7xl {
+    max-width: var(--container-7xl);
   }
   .max-w-\[55px\] {
     max-width: 55px;
   }
   .max-w-\[1920px\] {
     max-width: 1920px;
+  }
+  .max-w-lg {
+    max-width: var(--container-lg);
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -624,14 +627,23 @@
   .resize-none {
     resize: none;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   .flex-col {
     flex-direction: column;
   }
   .items-center {
     align-items: center;
   }
+  .items-start {
+    align-items: flex-start;
+  }
   .justify-between {
     justify-content: space-between;
+  }
+  .justify-center {
+    justify-content: center;
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -648,14 +660,14 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
   .gap-14 {
     gap: calc(var(--spacing) * 14);
   }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
+  }
+  .gap-30 {
+    gap: calc(var(--spacing) * 30);
   }
   .gap-\[9px\] {
     gap: 9px;
@@ -666,17 +678,25 @@
   .gap-\[46px\] {
     gap: 46px;
   }
-  .gap-\[56\] {
-    gap: 56;
-  }
-  .gap-\[56px\] {
-    gap: 56px;
-  }
   .gap-\[129px\] {
     gap: 129px;
   }
   .gap-\[651px\] {
     gap: 651px;
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-\[30px\] {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(30px * var(--tw-space-y-reverse));
+      margin-block-end: calc(30px * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .overflow-hidden {
     overflow: hidden;
@@ -692,12 +712,6 @@
   }
   .rounded-\[5px\] {
     border-radius: 5px;
-  }
-  .rounded-\[7px\] {
-    border-radius: 7px;
-  }
-  .rounded-\[10px\] {
-    border-radius: 10px;
   }
   .rounded-\[40px\] {
     border-radius: 40px;
@@ -725,9 +739,6 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
-  .border-\[\#555555\] {
-    border-color: #555555;
-  }
   .border-\[\#bc7b97\] {
     border-color: #bc7b97;
   }
@@ -743,12 +754,6 @@
   .border-pink-200 {
     border-color: var(--color-pink-200);
   }
-  .bg-\[\#\#fbf2e0\] {
-    background-color: ##fbf2e0;
-  }
-  .bg-\[\#\#fbfcfd\] {
-    background-color: ##fbfcfd;
-  }
   .bg-\[\#3c2a3a\] {
     background-color: #3c2a3a;
   }
@@ -761,11 +766,11 @@
   .bg-\[\#241520\] {
     background-color: #241520;
   }
+  .bg-\[\#E9DDC7\] {
+    background-color: #E9DDC7;
+  }
   .bg-\[\#EBF3F5\] {
     background-color: #EBF3F5;
-  }
-  .bg-\[\#FBF2E0\] {
-    background-color: #FBF2E0;
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
@@ -773,17 +778,11 @@
   .bg-\[\#bc7b97\] {
     background-color: #bc7b97;
   }
-  .bg-\[\#fafafa\] {
-    background-color: #fafafa;
-  }
   .bg-\[\#fbf2e0\] {
     background-color: #fbf2e0;
   }
   .bg-\[\#fbfcfd\] {
     background-color: #fbfcfd;
-  }
-  .bg-\[EBF3F5\] {
-    background-color: EBF3F5;
   }
   .bg-\[white\] {
     background-color: white;
@@ -800,14 +799,14 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
-  }
-  .p-\[236px\] {
-    padding: 236px;
   }
   .container {
     padding-inline: 120px;
@@ -833,23 +832,8 @@
   .px-\[11px\] {
     padding-inline: 11px;
   }
-  .px-\[34px\] {
-    padding-inline: 34px;
-  }
-  .px-\[60\] {
-    padding-inline: 60;
-  }
   .px-\[60px\] {
     padding-inline: 60px;
-  }
-  .px-\[96\] {
-    padding-inline: 96;
-  }
-  .px-\[96px\] {
-    padding-inline: 96px;
-  }
-  .px-\[100\] {
-    padding-inline: 100;
   }
   .px-\[100px\] {
     padding-inline: 100px;
@@ -887,11 +871,17 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
+  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
+  }
+  .py-20 {
+    padding-block: calc(var(--spacing) * 20);
   }
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
@@ -899,14 +889,8 @@
   .py-\[16\.5px\] {
     padding-block: 16.5px;
   }
-  .py-\[30\] {
-    padding-block: 30;
-  }
   .py-\[30px\] {
     padding-block: 30px;
-  }
-  .py-\[34px\] {
-    padding-block: 34px;
   }
   .py-\[66px\] {
     padding-block: 66px;
@@ -917,26 +901,14 @@
   .py-\[84px\] {
     padding-block: 84px;
   }
-  .py-\[86\] {
-    padding-block: 86;
-  }
   .py-\[86px\] {
     padding-block: 86px;
-  }
-  .py-\[96px\] {
-    padding-block: 96px;
-  }
-  .py-\[98\] {
-    padding-block: 98;
   }
   .py-\[98px\] {
     padding-block: 98px;
   }
   .py-\[100px\] {
     padding-block: 100px;
-  }
-  .py-\[120\] {
-    padding-block: 120;
   }
   .py-\[120px\] {
     padding-block: 120px;
@@ -947,6 +919,12 @@
   .py-\[207px\] {
     padding-block: 207px;
   }
+  .py-\[360\] {
+    padding-block: 360;
+  }
+  .py-\[360px\] {
+    padding-block: 360px;
+  }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
   }
@@ -955,6 +933,15 @@
   }
   .pt-\[25px\] {
     padding-top: 25px;
+  }
+  .pt-\[118px\] {
+    padding-top: 118px;
+  }
+  .pt-\[169\] {
+    padding-top: 169;
+  }
+  .pt-\[169px\] {
+    padding-top: 169px;
   }
   .pr-3 {
     padding-right: calc(var(--spacing) * 3);
@@ -967,6 +954,15 @@
   }
   .pb-\[39px\] {
     padding-bottom: 39px;
+  }
+  .pb-\[118\] {
+    padding-bottom: 118;
+  }
+  .pb-\[118px\] {
+    padding-bottom: 118px;
+  }
+  .pb-\[169px\] {
+    padding-bottom: 169px;
   }
   .pl-10 {
     padding-left: calc(var(--spacing) * 10);
@@ -992,9 +988,12 @@
   .font-roboto {
     font-family: var(--font-roboto);
   }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  .font-serif {
+    font-family: var(--font-serif);
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -1039,6 +1038,10 @@
   .text-\[70px\] {
     font-size: 70px;
   }
+  .leading-0 {
+    --tw-leading: calc(var(--spacing) * 0);
+    line-height: calc(var(--spacing) * 0);
+  }
   .leading-5 {
     --tw-leading: calc(var(--spacing) * 5);
     line-height: calc(var(--spacing) * 5);
@@ -1075,6 +1078,18 @@
     --tw-leading: 1.3;
     line-height: 1.3;
   }
+  .leading-\[1\.7\] {
+    --tw-leading: 1.7;
+    line-height: 1.7;
+  }
+  .leading-\[1\.25\] {
+    --tw-leading: 1.25;
+    line-height: 1.25;
+  }
+  .leading-\[1\] {
+    --tw-leading: 1;
+    line-height: 1;
+  }
   .leading-\[30px\] {
     --tw-leading: 30px;
     line-height: 30px;
@@ -1086,6 +1101,10 @@
   .leading-relaxed {
     --tw-leading: var(--leading-relaxed);
     line-height: var(--leading-relaxed);
+  }
+  .leading-tight {
+    --tw-leading: var(--leading-tight);
+    line-height: var(--leading-tight);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -1115,6 +1134,14 @@
     --tw-tracking: -0.01em;
     letter-spacing: -0.01em;
   }
+  .tracking-\[0\.01em\] {
+    --tw-tracking: 0.01em;
+    letter-spacing: 0.01em;
+  }
+  .tracking-\[0\.006rem\] {
+    --tw-tracking: 0.006rem;
+    letter-spacing: 0.006rem;
+  }
   .tracking-\[3px\] {
     --tw-tracking: 3px;
     letter-spacing: 3px;
@@ -1123,8 +1150,9 @@
     --tw-tracking: var(--tracking-wide);
     letter-spacing: var(--tracking-wide);
   }
-  .text-\[\#\#555555\] {
-    color: ##555555;
+  .tracking-widest {
+    --tw-tracking: var(--tracking-widest);
+    letter-spacing: var(--tracking-widest);
   }
   .text-\[\#0f0000\] {
     color: #0f0000;
@@ -1141,9 +1169,6 @@
   .text-\[\#555555\] {
     color: #555555;
   }
-  .text-\[\#636363\] {
-    color: #636363;
-  }
   .text-\[\#808080\] {
     color: #808080;
   }
@@ -1156,29 +1181,35 @@
   .text-\[\#FFFFFF\] {
     color: #FFFFFF;
   }
-  .text-\[\#\] {
-    color: #;
-  }
   .text-\[\#bc7b97\] {
     color: #bc7b97;
   }
   .text-\[\#fffefa\] {
     color: #fffefa;
   }
+  .text-\[15\] {
+    color: 15;
+  }
+  .text-\[15pz\] {
+    color: 15pz;
+  }
+  .text-\[15x\] {
+    color: 15x;
+  }
   .text-\[45\] {
     color: 45;
   }
-  .text-\[gr\] {
-    color: gr;
-  }
-  .text-\[gray\] {
-    color: gray;
+  .text-\[45p\] {
+    color: 45p;
   }
   .text-\[wheat\] {
     color: wheat;
   }
   .text-gray-500 {
     color: var(--color-gray-500);
+  }
+  .text-gray-600 {
+    color: var(--color-gray-600);
   }
   .text-gray-900 {
     color: var(--color-gray-900);
@@ -1199,8 +1230,8 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-sm {
@@ -1210,6 +1241,9 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -1261,6 +1295,11 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
 }
 @property --tw-translate-x {
   syntax: "*";
@@ -1296,6 +1335,11 @@
 @property --tw-skew-y {
   syntax: "*";
   inherits: false;
+}
+@property --tw-space-y-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1384,6 +1428,59 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-drop-shadow-size {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1395,6 +1492,7 @@
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
@@ -1414,6 +1512,19 @@
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
     }
   }
 }
